--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
+            <button id="home">Home</button>
             <button>About</button>
             <button id="menu">Menu</button>
             <button>Contact Us</button>
