add about and update menu

--- a/src/template.html
+++ b/src/template.html
@@ -9,9 +9,8 @@
     <header>
         <nav>
             <button id="home">Home</button>
-            <button>About</button>
+            <button id="about">About</button>
             <button id="menu">Menu</button>
-            <button>Contact Us</button>
         </nav>
     </header>
     <div id="content">
