--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Krusty Krab</title>
+    <link href="https://fonts.cdnfonts.com/css/krabby-patty" rel="stylesheet">
 </head>
 <body>
     <header>
